# OctoPrint-MoonrakerConnector

./: .pre-commit-config.yaml  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: README.txt  moonraker_connector.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_moonraker_connector/: __init__.py  client.py  connector.py  jsonrpc.py  schema.py
octoprint_moonraker_connector/static/clientjs/: moonraker_connector.js
octoprint_moonraker_connector/static/css/: moonraker_connector.css
octoprint_moonraker_connector/static/js/: moonraker_connector.js
octoprint_moonraker_connector/templates/: moonraker_connector_connection_option.jinja2  moonraker_connector_webcam.jinja2
tests/: test_macro_parameter_extractor.py
translations/: README.txt
